<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>

    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>

    <string name="error_password">La password debe tener minimo 5 caracteres.</string>

    <string name="product_name">Product</string>
    <string name="product_brand">Brand</string>
    <string name="product_category">Category</string>
    <string name="product_stock">Stock</string>
    <string name="product_price">Price</string>

    <string name="link_login_text">Ya tiene una cuenta? Ir al login.</string>
    <string name="link_register_text">No tienes una cuenta? Regístrate aquí.</string>
</resources>