<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="30dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/product_name"
            android:textColor="@color/bakels_primary"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/product_category"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/product_brand"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_stock"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:paddingStart="100dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>